[package]
name = "rhino"
version = "0.1.0"
edition = "2024"
description = "An etcd API shim that translates the etcd v3 gRPC API to SQL and Redis backends"
license = "Apache-2.0"

[[bin]]
name = "rhino-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
prost = "0.13"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-health = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"

# Vendored, lightly-patched h2: tolerate a malformed HTTP/2 :authority (drop it
# instead of RST_STREAM/PROTOCOL_ERROR) so etcd v3.5 clients that send
# ":authority: #initially=[...]" (e.g. k0s's kube-apiserver) can talk to rhino,
# matching Go grpc-server leniency. See third_party/h2/src/server.rs.
[patch.crates-io]
h2 = { path = "third_party/h2" }
